(fix) Fix spacing between album list and tracklist on mobile (#12)
* (fix) Fix spacing between album list and tracklist on mobile

--- a/client/style.css
+++ b/client/style.css
@@ -233,7 +233,7 @@ body, .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6  {
 .album-list-outer {
   overflow-y: scroll;
   padding-bottom: 10px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
   padding-top:10px;
   -webkit-overflow-scrolling: touch;
 
@@ -242,6 +242,7 @@ body, .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6  {
 .album-list-container {
   height: 600px;
   padding-left: 0;
+  padding-bottom: 20px;
 }
 
 .album-image {
